# noxsuite-security-platform

./: .env.example  .env.template  .env.template.secure  .gitignore  .pre-commit-config.yaml  ADHD_DEV_PROGRESS_20250730_134055.md  ADHD_VISUAL_PROGRESS_REPORT_20250730_142000.md  ADVANCED_AUTOMATION_SCENARIOS_COMPLETE.md  API.md  AUDIT_AND_FIX_REPORT.md  AUTOMATED_EXECUTION_LOG.txt  AUTOMATED_FINAL_STATUS.md  AUTOMATION_SCENARIOS_GUIDE.md  AUTONOMOUS_DEVELOPMENT_CYCLE_COMPLETE.md  CHANGELOG.md  CLEANUP_SUCCESS_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  COPILOT_FIX_GUIDE.md  CRITICAL_AUDIT_RBAC_SPRINT.md  CRITICAL_VALIDATION_MODE_COMPLETE.md  CUSTOM_AUTOMATION_SCENARIOS_COMPLETE.md  CVE_AUDIT_CODEBASE_UPGRADE_COMPLETE.md  DATABASE_MIGRATION_README.md  DEVELOPMENT_ACCELERATION_EXECUTIVE_SUMMARY.md  DEVELOPMENT_QUICKSTART.md  Dockerfile  Dockerfile.ai  Dockerfile.api  Dockerfile.langflow-secure  Dockerfile.noxsuite  Dockerfile.testsprite  EMERGENCY_RESPONSE_COMPLETE.md  EMERGENCY_SECURITY_INTEGRATION_SUCCESS_REPORT.md  EMERGENCY_SECURITY_PATCH_REPORT.md  EMERGENCY_VALIDATION_REPORT.md  ENGINEERING_REPORT.md  ENHANCED_CODING_ENGINEER_COMPLETE.md  ENHANCED_INSTALLER_DOCUMENTATION.md  ENHANCED_MONITORING_IMPLEMENTATION_COMPLETE.md  (+382 more)
.devcontainer/: devcontainer.json  setup-environment.sh
NoxPanel/: requirements.txt.conflict.2
NoxPanel_Suite_WIP/: CHANGE_AUDIT.md  COMPLETE_MCP_ECOSYSTEM_REPORT.md  FINAL_MCP_COMPLETION_REPORT.md  LICENSE  NOXSUITE_MCP_STATUS_REPORT.md  NoxPanel-Core.code-workspace  NoxPanel-DevOps.code-workspace  noxpanel-modular-workspace.code-workspace
NoxPanel_Suite_WIP/Docker & Config/: Dockerfile.autoscaler  Dockerfile.fastapi  Dockerfile.gateway  Dockerfile.production  docker-compose-optimized.yml  docker-compose-production.yml  docker-compose-simple.yml  docker-compose.noxsuite.yml  docker-compose.production.yml  docker-compose.yml  package.json  pyproject.toml  requirements-ai.txt  requirements-cloud.txt  requirements-microservices.txt  requirements-security.txt  requirements-test.txt  requirements.txt
NoxPanel_Suite_WIP/Docker & Config/k8s/: namespace.yaml  redis.yaml
aethercore/: Dockerfile.conflict.2  docker-compose.yml  docker-compose.yml.conflict.3  requirements.txt.conflict.3
agents/: langflow_config.json  project_context.json.conflict.2  supaermaven_tasks.json.conflict.2
analytics/: requirements.txt
auth/: __init__.py  auth_integration.py  auth_middleware.py  auth_service.py  jwt_utils.py  mfa_service.py  rbac_service.py  user_model.py
backend/: Dockerfile  main.py
backup_20250720_012355/: docker_diagnostics_simple.ps1.conflict.2  plugin_manifest_template.yml.conflict.3
ci/: auto_validate.yml.conflict.3
cleanup_empty_files/: __init___11.py  python fix_user_sessions.py
compliance/: rlvr_guardian_report.json.conflict.1
config/: heimnetz_unified.json.conflict.1  plugin_config_schema.json.conflict.1  security_config.json
copilot/: workspaceState.json.conflict.2
database/: SQLITE_VIOLATION_LOG.txt
demo_data/: ml_analytics_data.json  performance_metrics.json  security_logs.json  vulnerable_code.py
docker/: heimnetz_docker.json.conflict.3  prometheus-dev.yml.conflict.1
docs/: audit-v3.1.0.json  audit-v3.1.1.json.conflict.2  database_schema.md.conflict.1  ml_setup.md
enterprise/: Dockerfile.gateway.conflict.2  Dockerfile.resource.conflict.1  Dockerfile.tenant  Dockerfile.web.conflict.2  ai_config.json.conflict.1  analytics_config.json.conflict.2  global_config.json.conflict.2  library_assessment.json.conflict.2  nginx.conf
envs/: windows_config.json.conflict.2
(+2397 files in other folders)
